# wiggum

./: .gitignore  AGENTS.md  README.md  fix.sh  install.sh  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: troubleshooting.md  vibekanban.md
src/smithers/: __init__.py  __main__.py  cli.py  console.py  exceptions.py  logging_config.py
src/smithers/commands/: __init__.py  cleanup.py  fix.py  implement.py  plan.py  projects.py  quote.py  rejoin.py  sessions.py  standardize.py  update.py
src/smithers/models/: __init__.py  config.py  todo.py
src/smithers/prompts/: __init__.py  fix.py  implementation.py  planning.py  standardize.py  templates.py
src/smithers/services/: __init__.py  claude.py  config_loader.py  git.py  github.py  tmux.py  todo_updater.py  version.py  vibekanban.py
src/smithers/utils/: __init__.py  parsing.py
src/wiggum/: __init__.py  __main__.py  cli.py  exceptions.py
src/wiggum/commands/: __init__.py  fix.py  implement.py
src/wiggum/models/: __init__.py  config.py  stage.py  todo.py
src/wiggum/prompts/: __init__.py  fix.py  implementation.py  planning.py  templates.py
src/wiggum/services/: __init__.py  claude.py  git.py  github.py  tmux.py  version.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_cli.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_commands.py  test_models.py  test_prompts.py  test_todo_parser.py  test_todo_updater.py
