[project]
name = "smithers"
version = "1.7.1"
description = "Automate PR creation and review fixing with Claude AI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
]

[project.scripts]
smithers = "smithers.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smithers"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.11",
    "ty>=0.0.11",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W",       # pycodestyle
    "F",            # Pyflakes
    "I",            # isort
    "N",            # pep8-naming
    "UP",           # pyupgrade
    "ANN",          # flake8-annotations
    "B",            # flake8-bugbear
    "A",            # flake8-builtins
    "C4",           # flake8-comprehensions
    "DTZ",          # flake8-datetimez
    "T10",          # flake8-debugger
    "EM",           # flake8-errmsg
    "ICN",          # flake8-import-conventions
    "PIE",          # flake8-pie
    "PT",           # flake8-pytest-style
    "Q",            # flake8-quotes
    "RSE",          # flake8-raise
    "RET",          # flake8-return
    "SLF",          # flake8-self
    "SIM",          # flake8-simplify
    "TID",          # flake8-tidy-imports
    "TCH",          # flake8-type-checking
    "ARG",          # flake8-unused-arguments
    "PTH",          # flake8-use-pathlib
    "PL",           # Pylint
    "TRY",          # tryceratops
    "FLY",          # flynt
    "PERF",         # Perflint
    "FURB",         # refurb
    "RUF",          # Ruff-specific
]
ignore = [
    "TRY003",       # Avoid specifying long messages outside exception class
    "EM101",        # Exception must not use a string literal
    "EM102",        # Exception must not use an f-string literal
    "PLR0913",      # Too many arguments in function definition
    "PLR0912",      # Too many branches
    "PLR0915",      # Too many statements
    "PLR2004",      # Magic value used in comparison
    "PLC0415",      # import should be at top level
    "TC003",       # Move stdlib import into type-checking block
    "TRY300",       # Consider moving to else block
    "RSE102",       # Unnecessary parentheses on raised exception
    "PERF401",      # Use list.extend
    "RET504",       # Unnecessary assignment before return
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "PLR2004", "S101", "ARG001", "TC002"]
"src/smithers/prompts/*" = ["E501"]  # Long template strings are acceptable

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ty.environment]
python-version = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=smithers --cov-report=term-missing"
pythonpath = ["src"]
